login oauth selesai

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 ATLAS_CONNECT="mongodb+srv://admin:admin@unflush-hwbj3.mongodb.net/unflush?retryWrites=true&w=majority"
 SECRET_KEY=groupprojectharusselesai
+DEFAULT_PASSWORD=groupprojectharusselesai
+GOOGLE_CLIENT_ID="450205956534-t8mv0qj0kqcc53van5mbbahtk9vg8b40.apps.googleusercontent.com"
