success upload image

--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ ATLAS_CONNECT="mongodb+srv://admin:admin@unflush-hwbj3.mongodb.net/unflush?retry
 SECRET_KEY=groupprojectharusselesai
 DEFAULT_PASSWORD=groupprojectharusselesai
 GOOGLE_CLIENT_ID="450205956534-t8mv0qj0kqcc53van5mbbahtk9vg8b40.apps.googleusercontent.com"
+CLOUD_BUCKET="hacktiv-cloud-storage"
+GCLOUD_PROJECT="hacktiv-252609"
+KEYFILE_PATH=keyfile.json
