add fitur pencarian

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ GOOGLE_CLIENT_ID="450205956534-t8mv0qj0kqcc53van5mbbahtk9vg8b40.apps.googleuserc
 CLOUD_BUCKET="hacktiv-cloud-storage"
 GCLOUD_PROJECT="hacktiv-252609"
 KEYFILE_PATH=keyfile.json
+PORT=3000
