--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
   },
   "homepage": "https://github.com/GroupProjectWeek2/server#readme",
   "dependencies": {
+    "@google-cloud/storage": "^3.2.1",
+    "@google-cloud/vision": "^1.3.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "google-auth-library": "^5.2.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.7.0"
+    "mongoose": "^5.7.0",
+    "multer": "^1.4.2"
   }
 }
